@@ -1,3 +1,7 @@
+2006-02-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* config/sparc/sol2-bi.h (SPARC_DEFAULT_CMODEL): Set to CM_MEDMID.
+
 2006-02-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* pa/x-ada-hpux10, pa/t-pa-hpux10, pa/t-pa-hpux11: New files.
